Refactoring a use of Path not backwards compatible with Java 8